--- a/assignment_2/Candidate Test 2022 I.ipynb
+++ b/assignment_2/Candidate Test 2022 I.ipynb
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 243,
    "id": "74b468d3",
    "metadata": {},
    "outputs": [
@@ -270,9 +270,8 @@
        "[5 rows x 53 columns]"
       ]
      },
-     "execution_count": 213,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -280,7 +279,7 @@
     "\n",
     "all_data = pd.read_excel('alldata.xlsx')\n",
     "\n",
-    "all_data.head()\n"
+    "display(all_data.head())\n"
    ]
   },
   {
@@ -685,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 244,
    "id": "c12b4ec1",
    "metadata": {},
    "outputs": [
@@ -778,9 +777,8 @@
        "44   Østjyllands Storkreds                43          0.877551  "
       ]
      },
-     "execution_count": 220,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -790,8 +788,8 @@
     "\n",
     "# Top 5 \"most confident\" candidates and their information (confidence score and ratio attached as a new columns)\n",
     "\n",
-    "all_data.loc[confidences.head().index, ['navn', 'parti', 'storkreds']]\\\n",
-    "    .assign(confidence_score=confidences.head(), confidence_ratio=confidences.head() / answers.shape[1])\n",
+    "display(all_data.loc[confidences.head().index, ['navn', 'parti', 'storkreds']]\\\n",
+    "    .assign(confidence_score=confidences.head(), confidence_ratio=confidences.head() / answers.shape[1]))\n",
     "\n",
     "# interestingly, there is a tie for the top 1 with one representative from left wing and one from right wing party\n",
     "# and these people answered all the questions with strong confidence\n"
@@ -1524,7 +1522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 245,
    "id": "11952c17",
    "metadata": {},
    "outputs": [
@@ -1669,9 +1667,8 @@
        "76              Enhedslisten  "
       ]
      },
-     "execution_count": 240,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -1688,7 +1685,7 @@
     "\n",
     "wrong_predictions_df.columns = ['Name', 'Actual Party', 'Predicted Party']\n",
     "\n",
-    "wrong_predictions_df\n",
+    "display(wrong_predictions_df)\n",
     "\n"
    ]
   }
