--- a/assignment_2/Candidate Test 2022 I.ipynb
+++ b/assignment_2/Candidate Test 2022 I.ipynb
@@ -1706,7 +1706,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0rc1"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
